--- a/index.html
+++ b/index.html
@@ -13,7 +13,77 @@
 </head>
 <body>
   <main class="preview grid"> 
-    
+    <section class="stats">
+      <h1 class="stats__details">10,000+ of our users love our products.</h1>
+      <p class="stats__content"> 
+        We only provide great products combined with excellent customer service.
+        See what our satisfied customers are saying about our services.
+      </p>
+    </section>
+    <ul class="rating">
+      <li class="rating__box">
+        <figure class="rating__star">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+        </figure>
+        <p class="rating__by">Rated 5 Stars in Reviews</p>
+      </li>
+      <li class="rating__box ml">
+        <figure class="rating__star">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+        </figure>
+        <p class="rating__by">Rated 5 Stars in Report Guru</p>
+      </li>
+      <li class="rating__box ml__2">
+        <figure class="rating__star">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+          <img src="images/icon-star.svg" alt="" aria-hidden="true">
+        </figure>
+        <p class="rating__by">Rated 5 Stars in BestTech</p>
+      </li>
+    </ul>
+    <ul class="testimonial grid__column2">
+      <li class="testimonial__box">        
+        <img src="images/image-colton.jpg" alt="Colton Smith" class="testimonial__img">
+        <p class="testimonial__name">
+          Colton Smith
+          <span class="testimonial__des">Verified Buyer</span>
+        </p>
+        <p class="testimonial__content">
+          "We needed the same printed design as the one we had ordered a week prior.Not only did they find the original order, but we also received it in time. Excellent!"
+        </p>
+      </li>
+      <li class="testimonial__box mt">
+        <img src="images/image-irene.jpg" alt="Irene Roberts" class="testimonial__img">
+          <p class="testimonial__name">
+            Irene Roberts
+            <span class="testimonial__des">Verified Buyer</span>
+          </p>
+        <p class="testimonial__content">
+          "Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."
+        </p>
+      </li>
+      <li class="testimonial__box mt__2">
+        <img src="images/image-anne.jpg" alt="Anne Wallace" class="testimonial__img">
+          <p class="testimonial__name">
+            Anne Wallace
+            <span class="testimonial__des">Verified Buyer</span>
+          </p>
+        <p class="testimonial__content">
+          "Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"
+        </p>
+      </li>
+    </ul>
     
   </main>
 </body>
